# Vacancies_Parcer

./: README.md  functions.py  main.py  pyproject.toml
api_classes/: abstract_api_class.py  hh_api.py  superjob_api.py
files/: json_vacancy.py
utils/: vacancies.py
